cambie la letra

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camila Tuñas</title>
+    <title>🚀 Camila Tuñas</title>
     <!-- Styles -->
     
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul class="flexbox">
+                <li><span> <a href="#trabajos">MIS TRABAJOS</a></span> </li>
+                <li class="marginLeft: 15px"> </li>
+                <li> </li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
