--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 <body>
     <header>
         <nav>
-            <ul class="flexbox">
-                <li><span> <a href="#trabajos">MIS TRABAJOS</a></span> </li>
-                <li class="marginLeft: 15px"> </li>
-                <li> </li>
+            <ul class="container1">
+                <li><span class=""><a href="#hola">HOLA</a></span> </li>
+                <li><span><a href="#conocimiento"> CONOCIMIENTO </a></span></li>
+                <li><span><a href="#proyectos"> PROYECTOS</a></span></li>
+                <li><span><a href="#contacto"> CONTACTO</a></span></li>
             </ul>
         </nav>
     </header>
