agregue mas cosas

--- a/index.html
+++ b/index.html
@@ -13,13 +13,24 @@
     <header>
         <nav>
             <ul class="container1">
-                <li><span class=""><a href="#hola">HOLA</a></span> </li>
-                <li><span><a href="#conocimiento"> CONOCIMIENTO </a></span></li>
-                <li><span><a href="#proyectos"> PROYECTOS</a></span></li>
-                <li><span><a href="#contacto"> CONTACTO</a></span></li>
+                <li><span class="caja"><a href="#hola">HOLA</a></span> </li>
+                <li><span class="caja"><a href="#conocimiento"> CONOCIMIENTO </a></span></li>
+                <li><span class="caja"><a href="#proyectos"> PROYECTOS</a></span></li>
+                <li><span class="caja"><a href="#contacto"> CONTACTO</a></span></li>
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="container2">
+            <h2>¡Hola! Soy</h2>
+            <h1>Camila Tuñas</h1>
+            <p>Desarrolladora en proceso, amante de la musica y mamá de Tobias</p>
+        </div>
+
+
+
+
+    </main>
     
 </body>
 </html>
