--- a/index.html
+++ b/index.html
@@ -21,17 +21,73 @@
         </nav>
     </header>
     <main>
-        <div class="container2">
-            <h2>¡Hola! Soy</h2>
-            <h1>Camila Tuñas</h1>
-            <p>Desarrolladora en proceso, amante de la música y mamá de Tobias</p>
-            <div class="imagen"><img src="./assets/images/undraw_nature_m5ll.png" alt="Nature" width="400px" height="400px"></div>
-        </div>
-
-
-
-
+        <section>
+            <div class="container2">
+                <h2>¡Hola! Soy</h2>
+                <h1>Camila Tuñas</h1>
+                <p>Desarrolladora en proceso, amante de la música y mamá de Tobias</p>
+                <div class="imagen"><img src="./assets/images/undraw_nature_m5ll.png" alt="Nature" width="400px" height="400px"></div>
+            </div>
+            </section>
     </main>
-    
+    <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+    <div class="containerfinal">
+        <div class="cajafinal1">
+            <h2>Contactame</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, sequi laborum eaque fugit 
+                distinctio, repellendus quasi quibusdam iste esse magni quam, optio facilis nihil earum! Impedit dolor 
+                alias totam libero!</p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+        </div>
+        
+        <div class="cajafinal2">
+            <h2>Escribime</h2>
+            <form action="">
+                <label for="nombre">Nombre*</label><br>
+                <input type="text" name="Nombre" id="idNombre" placeholder="p.ej.:Camila">
+                <label for="nombre">Apellido*</label><br>
+                <input type="text" name="Apellido" id="idApellido" placeholder="p.ej.:Tuñas">
+                <label for="idEmail">Mail*</label>
+                <input type="text" name="mail" id="idEmail" 
+                size="30"
+                placeholder="p.ej.:camila_tunas@hotmail.com">
+                <label for="idMensaje">Mensaje*</label>
+                <textarea name="comentarios" id="idComentarios" cols="30" rows="10"
+                maxlength="1000" placeholder="Escribe tu mensaje aqui"></textarea>
+            </form>
+        </div>
+    </div>
+
+
+    <footer></footer>
 </body>
 </html>
