--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
     <main>
         <section>
             <div class="container2">
-                <h2>¡Hola! Soy</h2>
-                <h1>Camila Tuñas</h1>
-                <p>Desarrolladora en proceso, amante de la música y mamá de Tobias</p>
+                <div class="centro">
+                    <h2>¡Hola! Soy</h2>
+                    <h1>Camila Tuñas</h1>
+                    <p>Desarrolladora en proceso, amante de la música y mamá de Tobias</p>
+                </div>
                 <div class="imagen"><img src="./assets/images/undraw_nature_m5ll.png" alt="Nature" width="400px" height="400px"></div>
             </div>
             </section>
