--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </ul>
         </nav>
     </header>
+    <div class="padding">
     <main>
         <section>
             <div class="container2">
@@ -32,6 +33,7 @@
             </div>
             </section>
     </main>
+</div>
     <br>
         <br>
         <br>
