--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h1>Camila Tuñas</h1>
                     <p>Desarrolladora en proceso, amante de la música y mamá de Tobias</p>
                 </div>
-                <div class="imagen"><img src="./assets/images/undraw_nature_m5ll.png" alt="Nature" width="400px" height="400px"></div>
+                <div class="imagen"><img src="./assets/images/undraw_nature_m5ll (2).png" alt="Nature" width="400px" height="400px"></div>
             </div>
             </section>
     </main>
