--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><span class="caja"><a href="#hola">HOLA</a></span> </li>
                 <li><span class="caja"><a href="#conocimiento"> CONOCIMIENTO </a></span></li>
                 <li><span class="caja"><a href="#proyectos"> PROYECTOS</a></span></li>
-                <li><span class="caja"><a href="#contacto"> CONTACTO</a></span></li>
+                <li><span class="caja1"><a href="#contacto"> CONTACTO</a></span></li>
             </ul>
         </nav>
     </header>
@@ -27,6 +27,7 @@
                     <h2>¡Hola! Soy</h2>
                     <h1>Camila Tuñas</h1>
                     <p>Desarrolladora en proceso, amante de la música y mamá de Tobias</p>
+                    <div class="loquehago"><p>LO QUE HAGO</p></div>
                 </div>
                 <div class="imagen"><img src="./assets/images/undraw_nature_m5ll (2).png" alt="Nature" width="400px" height="400px"></div>
             </div>
