--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header>
         <nav>
             <ul class="container1">
-                <li><span class="caja"><a href="#hola">HOLA</a></span> </li>
-                <li><span class="caja"><a href="#conocimiento"> CONOCIMIENTO </a></span></li>
-                <li><span class="caja"><a href="#proyectos"> PROYECTOS</a></span></li>
+                <li><a href="#hola" class="caja">HOLA</a></li>
+                <li><a href="#conocimiento" class="caja"> CONOCIMIENTO </a></li>
+                <li><a href="#proyectos" class="caja"> PROYECTOS</a></li>
                 <li><a href="#contacto" class="caja1"> CONTACTO</a></li>
             </ul>
         </nav>
