--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🚀 Camila Tuñas</title>
     <!-- Styles -->
     <link rel="stylesheet" href="./styles/styles.css">
     <script src="https://kit.fontawesome.com/430e0fa557.js" crossorigin="anonymous"></script>
+    <title>🚀 Camila Tuñas</title>
 </head>
 <body>
     <header>
@@ -35,21 +35,28 @@
             </div>
             </section>
 <!--    -------------------------------------------------    -->
-            <section>
+        <section>
             <div class="container3">
                 <div class="conocimientos">
                     <h2>Mis conocimientos</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae eaque neque molestias 
                         consequuntur vel ab quas architecto.</p>
-                    <div><i class="fab fa-html5"></i></div>
+                    <div class="containerCard1">
+                        <div class="card"><i class="fab fa-html5"></i>HTML 5</div>
+                        <div class="card"><i class="fab fa-css3-alt"></i>CSS 3</div>
+                        <div class="card"><i class="fab fa-sass"></i>Sass</div>
+                    </div>
+                    <div class="containerCard2">
+                        <div class="card"><i class="fab fa-js"></i>JavaScript</div>
+                        <div class="card"><i class="fab fa-react"></i>React</div>
+                        <div class="card"><i class="fab fa-git-alt"></i>GIT</div>
+                    </div>
                 </div>
             </div>
         </section>
-      
     </div>
-
-
 <!--    -------------------------------------------------    -->
+    <!-- 
     <div class="containerfinal">
         <div class="cajafinal1">
             <h2>Contactame</h2>
@@ -81,6 +88,6 @@
     </div>
     
     </main>
-    <footer></footer>
+    <footer></footer>-->
 </body>
 </html>
