--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="container3">
                 <div class="conocimientos">
                     <h2>Mis conocimientos</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae eaque neque molestias 
+                    <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae eaque neque molestias 
                         consequuntur vel ab quas architecto.</p>
                     <div class="containerCard1">
                         <div class="card"><i class="fab fa-html5"></i>HTML 5</div>
@@ -54,7 +54,15 @@
                 </div>
             </div>
         </section>
-    </div>
+<!--    -------------------------------------------------    -->        
+    <section>
+        <div class="container4">
+            <i class="fas fa-quote-right"></i>
+            <p class="parrafo1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi quaerat aspernatur laboriosam doloremque iste perspiciatis veniam culpa beatae magni quo natus nostrum, laudantium exercitationem sit minima aut totam praesentium aliquam.</p>
+            <h3>Someone</h3>
+        </div>
+    </section>
+
 <!--    -------------------------------------------------    -->
     <!-- 
     <div class="containerfinal">
