arregle el margen que quedaba mas grande

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 <!--    -------------------------------------------------    -->
         <section>
             <div class="container3">
-                <div class="conocimientos">
-                    <h2>Mis conocimientos</h2>
+                    <div class="conocimientos"><h2>Mis conocimientos</h2>
+                    </div>
                     <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae eaque neque molestias 
                         consequuntur vel ab quas architecto.</p>
                     <div class="containerCard1">
@@ -51,7 +51,6 @@
                         <div class="card"><i class="fab fa-react"></i>React</div>
                         <div class="card"><i class="fab fa-git-alt"></i>GIT</div>
                     </div>
-                </div>
             </div>
         </section>
 <!--    -------------------------------------------------    -->        
