--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>🚀 Camila Tuñas</title>
 </head>
 <body>
+    <div class="container0">
     <header>
         <nav>
             <ul class="container1">
@@ -29,7 +30,7 @@
                     <h2>¡Hola! Soy</h2>
                     <h1>Camila Tuñas</h1>
                     <p>Desarrolladora en proceso, amante de la música y mamá de Tobías</p>
-                    <div class="loquehago"><p>LO QUE HAGO</p></div>
+                    <div class="loquehago"><a href="#loquehago"><p>LO QUE HAGO</p></a></div>
                 </div>
                 <div class=imagen><img src="./assets/images/undraw_nature_m5ll (2).png" alt="imagen" width="400px" height="400px"></div>
             </div>
@@ -41,12 +42,10 @@
                     </div>
                     <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae eaque neque molestias 
                         consequuntur vel ab quas architecto.</p>
-                    <div class="containerCard1">
-                        <div class="card"><i class="fab fa-html5"></i>HTML 5</div>
-                        <div class="card"><i class="fab fa-css3-alt"></i>CSS 3</div>
-                        <div class="card"><i class="fab fa-sass"></i>Sass</div>
-                    </div>
-                    <div class="containerCard2">
+                    <div class="containerCard">
+                        <div class="card"><i class="fab fa-html5"></i><p class="negrita"> HTML 5</p></div>
+                        <div class="card"><i class="fab fa-css3-alt"></i><p> CSS 3</p></div>
+                        <div class="card"><i class="fab fa-sass"></i><p> Sass</p></div>
                         <div class="card"><i class="fab fa-js"></i>JavaScript</div>
                         <div class="card"><i class="fab fa-react"></i>React</div>
                         <div class="card"><i class="fab fa-git-alt"></i>GIT</div>
@@ -54,13 +53,30 @@
             </div>
         </section>
 <!--    -------------------------------------------------    -->        
-    <section>
-        <div class="container4">
-            <i class="fas fa-quote-right"></i>
-            <p class="parrafo1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi quaerat aspernatur laboriosam doloremque iste perspiciatis veniam culpa beatae magni quo natus nostrum, laudantium exercitationem sit minima aut totam praesentium aliquam.</p>
-            <h3>Someone</h3>
-        </div>
-    </section>
+        <section>
+            <div class="container4">
+                <i class="fas fa-quote-right"></i>
+                <p class="parrafo1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi quaerat aspernatur laboriosam doloremque iste perspiciatis veniam culpa beatae magni quo natus nostrum, laudantium exercitationem sit minima aut totam praesentium aliquam.</p>
+                <h3>Someone</h3>
+            </div>
+        </section>
+<!-- -------------------------------------------------- -->
+        <section>
+            <div>
+                <h2>Mis proyectos</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quo nobis voluptatum tenetur! Id, nesciunt?</p>
+                <div class="foto"></div>
+                <div class="foto"></div>
+                <div class="foto"></div>
+                <div class="foto"></div>
+                <div class="foto"></div>
+                <div class="foto"></div>
+                <div class="foto"></div>
+            </div>
+        </section>
+
+
+
 
 <!--    -------------------------------------------------    -->
     <!-- 
@@ -96,5 +112,6 @@
     
     </main>
     <footer></footer>-->
+</div>
 </body>
 </html>
