--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
         </section>
 <!-- -------------------------------------------------- -->
         <section>
-            <div>
+            <div class="container5">
+            <div class="proyectos">
                 <h2>Mis proyectos</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quo nobis voluptatum tenetur! Id, nesciunt?</p>
+                <p class="parrafo1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quo nobis voluptatum tenetur! Id, nesciunt?</p></div>
                 <div class="foto"></div>
                 <div class="foto"></div>
                 <div class="foto"></div>
