--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <h2>¡Hola! Soy</h2>
                     <h1>Camila Tuñas</h1>
                     <p>Desarrolladora en proceso, amante de la música y mamá de Tobías</p>
-                    <div class="loquehago"><a href="#loquehago"><p>LO QUE HAGO</p></a></div>
+                    <div class="loquehago"><a href="#loquehago" class="color">LO QUE HAGO</a></div>
                 </div>
                 <div class=imagen><img src="./assets/images/undraw_nature_m5ll (2).png" alt="imagen" width="600px" height="500px"></div>
             </div>
@@ -44,12 +44,12 @@
                     <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae eaque neque molestias 
                         consequuntur vel ab quas architecto.</p>
                     <div class="containerCard">
-                        <div class="card"><i class="fab fa-html5"></i><p class="negrita"> HTML 5</p></div>
-                        <div class="card"><i class="fab fa-css3-alt"></i><p> CSS 3</p></div>
-                        <div class="card"><i class="fab fa-sass"></i><p> Sass</p></div>
-                        <div class="card"><i class="fab fa-js"></i>JavaScript</div>
-                        <div class="card"><i class="fab fa-react"></i>React</div>
-                        <div class="card"><i class="fab fa-git-alt"></i>GIT</div>
+                        <div class="card"><i class="fab fa-html5"></i><p class="tamaño"> HTML 5</p></div>
+                        <div class="card"><i class="fab fa-css3-alt"></i><p class="tamaño"> CSS 3</p></div>
+                        <div class="card"><i class="fab fa-sass"></i><p class="tamaño"> Sass</p></div>
+                        <div class="card"><i class="fab fa-js"></i><p class="tamaño"> JavaScript</p></div>
+                        <div class="card"><i class="fab fa-react"></i><p class="tamaño">React</p></div>
+                        <div class="card"><i class="fab fa-git-alt"></i><p class="tamaño">GIT</p></div>
                     </div>
             </div>
         </section>
@@ -64,16 +64,19 @@
 <!-- -------------------------------------------------- -->
         <section>
             <div class="container5">
-            <div class="proyectos">
-                <h2>Mis proyectos</h2>
-                <p class="parrafo1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quo nobis voluptatum tenetur! Id, nesciunt?</p></div>
-                <div class="foto"></div>
-                <div class="foto"></div>
-                <div class="foto"></div>
-                <div class="foto"></div>
-                <div class="foto"></div>
-                <div class="foto"></div>
-                <div class="foto"></div>
+                <div class="proyectos">
+                    <h2 class="cambios">Mis proyectos</h2>
+                    <p class="parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quo nobis voluptatum tenetur! Id, nesciunt?</p>
+                </div>
+                <div>
+                    <div class="foto1"></div>
+                    <div class="foto2"></div>
+                    <div class="foto3"></div>
+                    <div class="foto4"></div>
+                    <div class="foto5"></div>
+                    <div class="foto6"></div>
+                    <div class="foto7"></div>
+                </div>    
             </div>
         </section>
 <!-- -------------------------------------------------- -->
@@ -126,7 +129,7 @@
             
         
         </div>
-    </footer> -->
+    </footer> 
 </div>
 </body>
 </html>
