--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                     <p class="parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quo nobis voluptatum tenetur! Id, nesciunt?</p>
                 </div>
                 <div class="containerCard2">
-                    <div class="cardFoto"><img src="./assets/images/1.png" alt="imagen1" class="tamaño2"><span class="mt20"> Portfolio</span></div>
-                    <div class="cardFoto"><img src="./assets/images/2.png" alt="imagen2" class="tamaño2"><span class="mt20"> Generador de memes</span></div>
-                    <div class="cardFoto"><img src="./assets/images/3.png" alt="imagen3" class="tamaño2"><span class="mt20"> Match 3</span></div>
-                    <div class="cardFoto"><img src="./assets/images/4.png" alt="imagen4" class="tamaño2"><span class="mt20"> Controlador de gastos</span></div>
-                    <div class="cardFoto"><img src="./assets/images/5.png" alt="imagen5" class="tamaño2"><span class="mt20"> Administrador de reuniones</span></div>
-                    <div class="cardFoto"><img src="./assets/images/6.png" alt="imagen6" class="tamaño2"><span class="mt20"> Todo app</span></div>
-                    <div class="cardFoto"><img src="./assets/images/7.png" alt="imagen7" class="tamaño2"><span class="mt20"> Buscador de peliculas</span></div>
+                    <div class="cardFoto"><a href="" target="_blank"><img src="./assets/images/1.png" alt="imagen1" class="tamaño2"><span class="mt20"> Portfolio</span></a></div>
+                    <div class="cardFoto"><a href="" target="_blank"><img src="./assets/images/2.png" alt="imagen2" class="tamaño2"><span class="mt20"> Generador de memes</span></a></div>
+                    <div class="cardFoto"><a href="" target="_blank"><img src="./assets/images/3.png" alt="imagen3" class="tamaño2"><span class="mt20"> Match 3</span></a></div>
+                    <div class="cardFoto"><a href="" target="_blank"><img src="./assets/images/4.png" alt="imagen4" class="tamaño2"><span class="mt20"> Controlador de gastos</span></a></div>
+                    <div class="cardFoto"><a href="" target="_blank"><img src="./assets/images/5.png" alt="imagen5" class="tamaño2"><span class="mt20"> Administrador de reuniones</span></a></div>
+                    <div class="cardFoto"><a href="" target="_blank"><img src="./assets/images/6.png" alt="imagen6" class="tamaño2"><span class="mt20"> Todo app</span></a></div>
+                    <div class="cardFoto"><a href="" target="_blank"><img src="./assets/images/7.png" alt="imagen7" class="tamaño2"><span class="mt20"> Buscador de peliculas</span></a></div>
                 </div>    
             </div>
         </section>
@@ -92,13 +92,12 @@
                     <h2 class="contactame">Contactame</h2>
                     <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quo nobis voluptatum tenetur! Id, nesciunt? Modi quasi repudiandae quam hic quo, qui cumque nam voluptates, ipsam, tempora eaque numquam eligendi.</p>
                     <div class="containerfinal3">
-                        <div class="margin"><a href="http://https://camila2604.github.io/portafolio01/"><i class="fab fa-twitter"></i><span class="separado">@CamilaTuñas</span></a></div>
-                        <div class="margin"><a href="http://https://camila2604.github.io/portafolio01/"><i class="fab fa-github-alt"></i><span class="separado"> Camila2604</span></a></div>
-                        <div class="margin"><a href="http://https://camila2604.github.io/portafolio01/"><i class="fab fa-linkedin-in"></i><span class="separado">camilatuñas</span></a></div>
-                        <div class="margin"><a href="http://https://camila2604.github.io/portafolio01/"><i class="fas fa-envelope"></i><span class="separado"> camila_tunas@hotmail.com</span></a></div>
+                        <div class="margin"><a href="https://twitter.com/?lang=es"><i class="fab fa-twitter"></i><span class="separado">@CamilaTuñas</span></a></div>
+                        <div class="margin"><a href="https://github.com/"><i class="fab fa-github-alt"></i><span class="separado"> Camila2604</span></a></div>
+                        <div class="margin"><a href="https://ar.linkedin.com/"><i class="fab fa-linkedin-in"></i><span class="separado">camilatuñas</span></a></div>
+                        <div class="margin"><a href="https://outlook.live.com/owa/"><i class="fas fa-envelope"></i><span class="separado"> camila_tunas@hotmail.com</span></a></div>
                     </div>
                 </div>
-<!--   --------------------------------------------- -->                
             <div class="cajafinal2">
                 <h2 class="contactame">Escribime</h2>
                 <form action="">
@@ -129,10 +128,10 @@
                 <li><a href="#contacto" class="cajaFooter"> CONTACTO</a></li>
             </ul>
             <div class="containerFooter3">
-                <div><a href="http://https://camila2604.github.io/portafolio01/"><i class="fab fa-twitter color3"></i></a></div>
-                <div><a href="http://https://camila2604.github.io/portafolio01/"><i class="fab fa-github-alt color3"></i></a></div>
-                <div><a href="http://https://camila2604.github.io/portafolio01/"><i class="fab fa-linkedin-in color3"></i></a></div>
-                <div><a href="http://https://camila2604.github.io/portafolio01/"><i class="fas fa-envelope color3"></i></a></div>
+                <div><a href="https://twitter.com/?lang=es"><i class="fab fa-twitter color3"></i></a></div>
+                <div><a href="https://github.com/"><i class="fab fa-github-alt color3"></i></a></div>
+                <div><a href="https://ar.linkedin.com/"><i class="fab fa-linkedin-in color3"></i></a></div>
+                <div><a href="https://outlook.live.com/owa/"><i class="fas fa-envelope color3"></i></a></div>
             </div>
             <p>Hecho con ❤️ por Camila </p>
             
