--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Styles -->
+    <link rel="stylesheet" href="animaciones.css">
     <link rel="stylesheet" href="./styles/styles.css">
     <script src="https://kit.fontawesome.com/430e0fa557.js" crossorigin="anonymous"></script>
     <title>🚀 Camila Tuñas</title>
@@ -32,7 +33,7 @@
                     <h2>¡Hola! Soy</h2>
                     <h1>Camila Tuñas</h1>
                     <p>Desarrolladora en proceso, amante de la música y mamá de Tobías</p>
-                    <div class="loquehago"><a href="#loquehago" class="color">LO QUE HAGO</a></div>
+                    <div class="loquehago"><a href="#loquehago" class="color1">LO QUE HAGO</a></div>
                 </div>
                 <div class=imagen><img src="./assets/images/undraw_nature_m5ll (2).png" alt="imagen" width="600px" height="500px"></div>
             </div>
@@ -92,10 +93,10 @@
                     <h2 class="contactame">Contactame</h2>
                     <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quo nobis voluptatum tenetur! Id, nesciunt? Modi quasi repudiandae quam hic quo, qui cumque nam voluptates, ipsam, tempora eaque numquam eligendi.</p>
                     <div class="containerfinal3">
-                        <div class="margin"><a href="https://twitter.com/?lang=es"><i class="fab fa-twitter"></i><span class="separado">@CamilaTuñas</span></a></div>
-                        <div class="margin"><a href="https://github.com/"><i class="fab fa-github-alt"></i><span class="separado"> Camila2604</span></a></div>
-                        <div class="margin"><a href="https://ar.linkedin.com/"><i class="fab fa-linkedin-in"></i><span class="separado">camilatuñas</span></a></div>
-                        <div class="margin"><a href="https://outlook.live.com/owa/"><i class="fas fa-envelope"></i><span class="separado"> camila_tunas@hotmail.com</span></a></div>
+                        <div><a href="https://twitter.com/?lang=es"><i class="fab fa-twitter cambios2"></i><span class="color2">@CamilaTuñas</span></a></div>
+                        <div><a href="https://github.com/"><i class="fab fa-github-alt cambios2"></i><span class="color2"> Camila2604</span></a></div>
+                        <div><a href="https://ar.linkedin.com/"><i class="fab fa-linkedin-in cambios2"></i><span class="color2">camilatuñas</span></a></div>
+                        <div><a href="https://outlook.live.com/owa/"><i class="fas fa-envelope cambios2"></i><span class="color2"> camila_tunas@hotmail.com</span></a></div>
                     </div>
                 </div>
             <div class="cajafinal2">
@@ -128,10 +129,10 @@
                 <li><a href="#contacto" class="cajaFooter"> CONTACTO</a></li>
             </ul>
             <div class="containerFooter3">
-                <div><a href="https://twitter.com/?lang=es"><i class="fab fa-twitter color3"></i></a></div>
-                <div><a href="https://github.com/"><i class="fab fa-github-alt color3"></i></a></div>
-                <div><a href="https://ar.linkedin.com/"><i class="fab fa-linkedin-in color3"></i></a></div>
-                <div><a href="https://outlook.live.com/owa/"><i class="fas fa-envelope color3"></i></a></div>
+                <div><a href="https://twitter.com/?lang=es"><i class="fab fa-twitter cambios3"></i></a></div>
+                <div><a href="https://github.com/"><i class="fab fa-github-alt cambios3"></i></a></div>
+                <div><a href="https://ar.linkedin.com/"><i class="fab fa-linkedin-in cambios3"></i></a></div>
+                <div><a href="https://outlook.live.com/owa/"><i class="fas fa-envelope cambios3"></i></a></div>
             </div>
             <p>Hecho con ❤️ por Camila </p>
             
