cambios en active

--- a/index.html
+++ b/index.html
@@ -93,12 +93,15 @@
                     <h2 class="contactame">Contactame</h2>
                     <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quo nobis voluptatum tenetur! Id, nesciunt? Modi quasi repudiandae quam hic quo, qui cumque nam voluptates, ipsam, tempora eaque numquam eligendi.</p>
                     <div class="containerfinal3">
-                        <div><a href="https://twitter.com/?lang=es"><i class="fab fa-twitter cambios2"></i><span class="color2">@CamilaTuñas</span></a></div>
-                        <div><a href="https://github.com/"><i class="fab fa-github-alt cambios2"></i><span class="color2"> Camila2604</span></a></div>
-                        <div><a href="https://ar.linkedin.com/"><i class="fab fa-linkedin-in cambios2"></i><span class="color2">camilatuñas</span></a></div>
-                        <div><a href="https://outlook.live.com/owa/"><i class="fas fa-envelope cambios2"></i><span class="color2"> camila_tunas@hotmail.com</span></a></div>
+                        <div class="caja-active"><a href="https://twitter.com/?lang=es"><i class="fab fa-twitter cambios2"></i><span class="color2">@CamilaTuñas</span></a></div>
+                        <div class="caja-active"><a href="https://github.com/"><i class="fab fa-github-alt cambios2"></i><span class="color2"> Camila2604</span></a></div>
+                        <div class="caja-active"><a href="https://ar.linkedin.com/"><i class="fab fa-linkedin-in cambios2"></i><span class="color2">camilatuñas</span></a></div>
+                        <div class="caja-active"><a href="https://outlook.live.com/owa/"><i class="fas fa-envelope cambios2"></i><span class="color2"> camila_tunas@hotmail.com</span></a></div>
                     </div>
                 </div>
+
+
+            <!-- Terminar  -->
             <div class="cajafinal2">
                 <h2 class="contactame">Escribime</h2>
                 <form action="">
@@ -119,6 +122,9 @@
         </div>
         </section>
     </main>
+
+
+    
 <!-- -------------------------------------- -->
     <footer>
         <div class="containerFooter1">
