--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         <a name="hola"></a>
             <div class="container2">
                 <div class="centro">
-                    <h2>¡Hola! Soy</h2>
+                    <h3>¡Hola! Soy</h3>
                     <h1>Camila Tuñas</h1>
                     <p>Desarrolladora en proceso, amante de la música y mamá de Tobías</p>
-                    <div class="loquehago"><a href="#loquehago" class="color1">LO QUE HAGO</a></div>
+                    <div class="lo-que-hago"><a href="#loquehago" class="color1">LO QUE HAGO</a></div>
                 </div>
                 <div class=imagen><img src="./assets/images/undraw_nature_m5ll (2).png" alt="imagen" width="600px" height="500px"></div>
             </div>
-            </section>
+    </section>
 <!--    ------------------------------------------------- -->
         <a name="conocimiento"></a>
         <section>
@@ -46,7 +46,7 @@
                     </div>
                     <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae eaque neque molestias 
                         consequuntur vel ab quas architecto.</p>
-                    <div class="containerCard">
+                    <div class="container-card">
                         <div class="card"><i class="fab fa-html5"></i><p class="tamaño"> HTML 5</p></div>
                         <div class="card"><i class="fab fa-css3-alt"></i><p class="tamaño"> CSS 3</p></div>
                         <div class="card"><i class="fab fa-sass"></i><p class="tamaño"> Sass</p></div>
@@ -61,7 +61,7 @@
             <div class="container4">
                 <i class="fas fa-quote-right"></i>
                 <p class="parrafo1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi quaerat aspernatur laboriosam doloremque iste perspiciatis veniam culpa beatae magni quo natus nostrum, laudantium exercitationem sit minima aut totam praesentium aliquam.</p>
-                <h3>Someone</h3>
+                <h4>Someone</h4>
             </div>
         </section>
 <!-- -------------------------------------------------- -->
@@ -73,49 +73,61 @@
                     <h2 class="cambios">Mis proyectos</h2>
                     <p class="parrafo2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quo nobis voluptatum tenetur! Id, nesciunt?</p>
                 </div>
-                <div class="containerCard2">
-                    <div class="cardFoto"><a href="" target="_blank"><img src="./assets/images/1.png" alt="imagen1" class="tamaño2"><span class="mt20"> Portfolio</span></a></div>
-                    <div class="cardFoto"><a href="" target="_blank"><img src="./assets/images/2.png" alt="imagen2" class="tamaño2"><span class="mt20"> Generador de memes</span></a></div>
-                    <div class="cardFoto"><a href="" target="_blank"><img src="./assets/images/3.png" alt="imagen3" class="tamaño2"><span class="mt20"> Match 3</span></a></div>
-                    <div class="cardFoto"><a href="" target="_blank"><img src="./assets/images/4.png" alt="imagen4" class="tamaño2"><span class="mt20"> Controlador de gastos</span></a></div>
-                    <div class="cardFoto"><a href="" target="_blank"><img src="./assets/images/5.png" alt="imagen5" class="tamaño2"><span class="mt20"> Administrador de reuniones</span></a></div>
-                    <div class="cardFoto"><a href="" target="_blank"><img src="./assets/images/6.png" alt="imagen6" class="tamaño2"><span class="mt20"> Todo app</span></a></div>
-                    <div class="cardFoto"><a href="" target="_blank"><img src="./assets/images/7.png" alt="imagen7" class="tamaño2"><span class="mt20"> Buscador de peliculas</span></a></div>
+                <div class="container-card2">
+                    <div class="card-foto"><a href="" target="_blank"><img src="./assets/images/1.png" alt="imagen1" class="tamaño2"><span class="mt20"> Portfolio</span></a></div>
+                    <div class="card-foto"><a href="" target="_blank"><img src="./assets/images/2.png" alt="imagen2" class="tamaño2"><span class="mt20"> Generador de memes</span></a></div>
+                    <div class="card-foto"><a href="" target="_blank"><img src="./assets/images/3.png" alt="imagen3" class="tamaño2"><span class="mt20"> Match 3</span></a></div>
+                    <div class="card-foto"><a href="" target="_blank"><img src="./assets/images/4.png" alt="imagen4" class="tamaño2"><span class="mt20"> Controlador de gastos</span></a></div>
+                    <div class="card-foto"><a href="" target="_blank"><img src="./assets/images/5.png" alt="imagen5" class="tamaño2"><span class="mt20"> Administrador de reuniones</span></a></div>
+                    <div class="card-foto"><a href="" target="_blank"><img src="./assets/images/6.png" alt="imagen6" class="tamaño2"><span class="mt20"> Todo app</span></a></div>
+                    <div class="card-foto"><a href="" target="_blank"><img src="./assets/images/7.png" alt="imagen7" class="tamaño2"><span class="mt20"> Buscador de peliculas</span></a></div>
                 </div>    
             </div>
         </section>
 <!-- -------------------------------------------------- -->
-        <a name="contacto"></a>
+    <a name="contacto"></a>
     <section>    
-        <div class="containerfinal">
-            <div class="containerfinal2">
-                <div class="cajafinal1">
-                    <h2 class="contactame">Contactame</h2>
+        <div class="container-final">
+            <div class="container-final2">
+                <div class="caja-final1">
+                    <h2>Contactame</h2>
                     <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quo nobis voluptatum tenetur! Id, nesciunt? Modi quasi repudiandae quam hic quo, qui cumque nam voluptates, ipsam, tempora eaque numquam eligendi.</p>
-                    <div class="containerfinal3">
+                    <div class="container-item">
                         <div class="caja-active"><a href="https://twitter.com/?lang=es"><i class="fab fa-twitter cambios2"></i><span class="color2">@CamilaTuñas</span></a></div>
                         <div class="caja-active"><a href="https://github.com/"><i class="fab fa-github-alt cambios2"></i><span class="color2"> Camila2604</span></a></div>
                         <div class="caja-active"><a href="https://ar.linkedin.com/"><i class="fab fa-linkedin-in cambios2"></i><span class="color2">camilatuñas</span></a></div>
                         <div class="caja-active"><a href="https://outlook.live.com/owa/"><i class="fas fa-envelope cambios2"></i><span class="color2"> camila_tunas@hotmail.com</span></a></div>
                     </div>
                 </div>
-
-
-            <!-- Terminar  -->
-            <div class="cajafinal2">
-                <h2 class="contactame">Escribime</h2>
+            <!-- Form  -->
+                <div class="cajafinal2">
+                <h2>Escribime</h2>
                 <form action="">
-                    <label for="nombre">Nombre*</label>
-                    <input type="text" name="Nombre" id="idNombre" placeholder="p.ej.:Camila">
-                    <label for="nombre">Apellido*</label>
-                    <input type="text" name="Apellido" id="idApellido" placeholder="p.ej.:Tuñas">
-                    <label for="idEmail">Mail*</label>
-                    <input type="text" name="mail" id="idEmail" 
-                size="30"
-                placeholder="p.ej.:camila_tunas@hotmail.com">
-                    <label for="idMensaje">Mensaje*</label>
-                    <textarea name="comentarios" id="idComentarios" cols="30" rows="10"
-                maxlength="1000" placeholder="Escribe tu mensaje aqui"></textarea>
+                    <div class="container-form">
+                        <div class="caja-form"><label for="nombre">Nombre*</label>
+                            <input type="text" name="Nombre" id="idNombre" placeholder="p.ej.:Camila">
+                        </div>
+                        <div class="caja-form">      
+                            <label for="nombre">Apellido*</label>
+                            <input type="text" name="Apellido" id="idApellido" placeholder="p.ej.:Tuñas">
+                        </div>
+                    </div>
+                    <div class="container-form ">
+                        <div class="caja-form">
+                            <label for="idEmail">Mail*</label>
+                            <input type="text" name="mail" id="idEmail" size="30" placeholder="p.ej.:camila_tunas@hotmail.com">
+                        </div>
+                    </div>    
+                    <div class="container-form">
+                        <div class="caja-form">
+                            <label for="idMensaje">Mensaje*</label>
+                            <textarea name="comentarios" id="idComentarios" cols="30" rows="10" maxlength="1000" placeholder="Escribe tu mensaje aqui"></textarea>
+                        </div>    
+                    </div>
+                    <div class="container-form">
+                        <div class="caja-button"><button type="submit">ENVIAR </button></div>
+                    </div>
+                </div>
                 </form>
             </div>
         </div>    
