cambio en caja-active

--- a/index.html
+++ b/index.html
@@ -113,11 +113,29 @@
                 <div class="caja-final1">
                     <h2>Contactame</h2>
                     <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quo nobis voluptatum tenetur! Id, nesciunt? Modi quasi repudiandae quam hic quo, qui cumque nam voluptates, ipsam, tempora eaque numquam eligendi.</p>
-                    <div class="container-item">
-                        <div class="caja-active"><a href="https://twitter.com/?lang=es"><i class="fab fa-twitter cambios2"></i><span class="color2">@CamilaTuñas</span></a></div>
-                        <div class="caja-active"><a href="https://github.com/"><i class="fab fa-github-alt cambios2"></i><span class="color2"> Camila2604</span></a></div>
-                        <div class="caja-active"><a href="https://ar.linkedin.com/"><i class="fab fa-linkedin-in cambios2"></i><span class="color2">camilatuñas</span></a></div>
-                        <div class="caja-active"><a href="https://outlook.live.com/owa/"><i class="fas fa-envelope cambios2"></i><span class="color2"> camila_tunas@hotmail.com</span></a></div>
+                    
+                    <div class="container-contactos">
+                        <div class="caja-active">
+                                <a href="https://twitter.com/?lang=es">
+                                <i class="fab fa-twitter cambios2"></i>
+                                <span>@CamilaTuñas</span>
+                            </a></div>
+                        <div class="caja-active">
+                            <a href="https://github.com/">
+                            <i class="fab fa-github-alt cambios2"></i>
+                            <span> Camila2604</span>
+                            </a></div>
+                        <div class="caja-active">
+                            <a href="https://ar.linkedin.com/">
+                            <div></div>
+                            <i class="fab fa-linkedin-in cambios2"></i>
+                            <span>camilatuñas</span>
+                            </a></div>
+                        <div class="caja-active">
+                            <a href="https://outlook.live.com/owa/">
+                            <i class="fas fa-envelope cambios2"></i>
+                            <span> camila_tunas@hotmail.com</span>
+                        </a></div>
                     </div>
                 </div>
             <!-- Formulario  -->
